# tiling_manager

./: .gitignore  CMakeLists.txt  build.bat
Bridge/: CMakeLists.txt  main.cpp
Bridge/public/: bridge.h
Manager/: CMakeLists.txt  main.cpp
Tasks/: CMakeLists.txt
Tasks/private/: tasks.cpp
Tasks/public/: tasks.h
Tiling/: CMakeLists.txt  main.cpp
scripts/: test.lua
